<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darck_blue">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ellipse_3"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ellipse_3__1_"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ellipse_4"/>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="Vazifa qo'shish"
        app:titleTextColor="@color/white"
        app:titleMarginStart="90dp"
        android:layout_centerHorizontal="true"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/etCardView"
        app:cardCornerRadius="21dp"
        android:layout_below="@id/addToolbar"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/delay_color">
        <EditText
            android:id="@+id/etToDo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/vazifa_nomi"
            android:textColorHint="#3fff"
            android:minHeight="48dp"
            android:textColor="@color/white"
            tools:ignore="Autofill,TextFields,TextContrastCheck,VisualLintTextFieldSize" />
    </androidx.cardview.widget.CardView>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/muhim_vazifa"
        android:textColor="@color/white"
        android:layout_below="@id/etCardView"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/checkNewData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="32dp"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/delete_all_task"
            android:elevation="0dp"
            android:src="@drawable/baseline_check_24"
            app:tint="@color/darcken_blue"
            tools:ignore="ContentDescription" />
</RelativeLayout>